discussion/kv_engine/179400/179400_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-08 09:19:43.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-08 12:12:20.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20147/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9: error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
        LOG_CRITICAL_RAW("server api freq sat");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1452:9: error: use of undeclared identifier "EP_LOG_CRITICAL_RAW" [clang-diagnostic-error]
        EP_LOG_CRITICAL_RAW("ht saturated");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_cluster/unified_caching_test.cc:59:14: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
        std::this_thread::sleep_for(std::chrono::milliseconds(100));
             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20147/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/server_api.cc:228:9:
error: use of undeclared identifier "LOG_CRITICAL_RAW" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20147/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49117/ : FAILURE

Failure of GoogleTest "SingleThreadedCheckpointTest.CursorDistance_Deduplication":

<pre>
[ RUN      ] SingleThreadedCheckpointTest.CursorDistance_Deduplication
2022-09-08T02:46:04.593130-07:00 CRITICAL (SynchronousEPEngine:default) ht saturated
2022-09-08T02:46:04.593190-07:00 CRITICAL (SynchronousEPEngine:default) test
2022-09-08T02:46:04.593195-07:00 CRITICAL (SynchronousEPEngine:default) KVBucket::itemFrequencyCounterSaturated
2022-09-08T02:46:04.593203-07:00 CRITICAL (SynchronousEPEngine:default) waking item freq decayer
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] SingleThreadedCheckpointTest.CursorDistance_Deduplication (6 ms)
SingleThreadedCheckpointTest.CursorDistance_Deduplication
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49117/ )

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T02:47:44.584987-07:00 CRITICAL (default) freq decaying
Unexpected stat: ep_unified_caching from stat group 
Unexpected stat: ep_unified_caching from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
(39 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49117/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41287/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:1452:9:
error: use of undeclared identifier "EP_LOG_CRITICAL_RAW"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41287/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30505/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T09:59:15.209909+00:00 CRITICAL (default) freq decaying
[2022-09-08T09:59:24.689Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T09:59:24.689Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T09:59:24.689Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T09:59:24.689Z] (211 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30505/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30505/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9945/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T02:37:34.111088-07:00 CRITICAL (default) freq decaying
[2022-09-08T09:37:35.895Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T09:37:35.895Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T09:37:35.895Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T09:37:35.895Z] (17 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9945/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22468/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T10:00:19.206931+00:00 CRITICAL (default) freq decaying
[2022-09-08T10:00:21.855Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T10:00:21.855Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T10:00:21.855Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T10:00:21.855Z] (100 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22468/ )

Failure of GoogleTest "TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl
[2022-09-08T10:02:25.643Z] unknown file: Failure
[2022-09-08T10:02:25.643Z] C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 2000ms for a response for COMPACT_DB" thrown in the test body.
[2022-09-08T10:02:25.643Z] [  FAILED  ] TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl, where GetParam() = McbpSsl (2016 ms)
TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22468/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22468/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23213/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T09:50:38.606244+00:00 CRITICAL (default) freq decaying
[2022-09-08T09:50:48.968Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T09:50:48.968Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T09:50:48.968Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T09:50:48.968Z] (766 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23213/ )

ThreadSanitizer issue: data race /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/chrono:553 in bool std::chrono::operator==<long, std::ratio<1l, 1l>, long, std::ratio<1l, 1l> >(std::chrono::duration<long, std::ratio<1l, 1l> > const&, std::chrono::duration<long, std::ratio<1l, 1l> > const&)  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23213/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22111/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T09:40:41.549975+00:00 CRITICAL (default) freq decaying
[2022-09-08T09:40:46.183Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T09:40:46.183Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T09:40:46.183Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T09:40:46.183Z] (58 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22111/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22111/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21442/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [144/160]: test_MB-19687_fixed...2022-09-08T10:42:54.242203+01:00 CRITICAL (default) freq decaying
[2022-09-08T09:42:58.159Z] Unexpected stat: ep_unified_caching from stat group 
[2022-09-08T09:42:58.159Z] Unexpected stat: ep_unified_caching from stat group config
[2022-09-08T09:42:58.159Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7808 Test failed: `stats error" (missing stats)
[2022-09-08T09:42:58.159Z] (44 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21442/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19368/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9847/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
